Implement code review properties